# aoc24

./: .gdbinit  .gitignore  CMakeLists.txt  Dockerfile
.devcontainer/: Dockerfile  devcontainer.json
lib/: CMakeLists.txt  aocmath.cpp  aocmath.h  aocmath_test.cpp  char_grid.cpp  char_grid.h  char_grid_test.cpp  grid.cpp  grid.h  grid_test.cpp  math.cpp  math.h  parsing.cpp  parsing.h  parsing_test.cpp  test_math.cpp  test_parsing.cpp  test_utils.cpp  utils.cpp  utils.h
printers/: eigen_printer.py
puzzles/day01/: CMakeLists.txt  day01.cpp  day01.h  day01_test.cpp  main.cpp
puzzles/day02/: CMakeLists.txt  day02.cpp  day02.h  day02_test.cpp  main.cpp
puzzles/day03/: CMakeLists.txt  day03.cpp  day03_test.cpp  main.cpp
puzzles/day04/: CMakeLists.txt  day04.cpp  day04.h  day04_test.cpp  main.cpp
puzzles/day05/: CMakeLists.txt  day05.cpp  day05.h  day05_test.cpp  main.cpp
puzzles/day06/: CMakeLists.txt  day06.cpp  day06_test.cpp  main.cpp  test_edge.txt  test_small.txt
puzzles/day07/: CMakeLists.txt  day07.cpp  day07.h  day07_test.cpp  main.cpp
puzzles/day08/: CMakeLists.txt  day08.cpp  day08_test.cpp  main.cpp
puzzles/day09/: CMakeLists.txt  day09.cpp  day09.h  day09_test.cpp  main.cpp
puzzles/day10/: CMakeLists.txt  day10.cpp  day10.h  day10_test.cpp  main.cpp
puzzles/day11/: CMakeLists.txt  binary_tree.h  day11.cpp  day11.h  day11_test.cpp  main.cpp
puzzles/day12/: CMakeLists.txt  day12.cpp  day12.h  day12_test.cpp  main.cpp  test3.txt
puzzles/day13/: CMakeLists.txt  day13.cpp  day13.h  day13_test.cpp  main.cpp
puzzles/day14/: CMakeLists.txt  bot_env.cpp  bot_env.h  bot_env_test.cpp  day14.cpp  day14.h  day14_test.cpp  main.cpp  multi_bot_env.cpp  multi_bot_env.h  multi_bot_env_test.cpp
puzzles/day15/: CMakeLists.txt  day15.cpp  day15.h  day15_test.cpp  main.cpp
